Make kur.sh self-bootstrapping; README one-line curl install
kur.sh now clones/updates the repo when run via 'curl | bash', matching the
edevlet-eimza-mac-arm64 install flow. README leads with the single-command
install.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>